[package]
name = "up-down-workers"
version = "0.1.0"
authors = ["Shivelight <shivelight@tuta.io>"]
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
http = "1.3"
worker = { version = "0.6.0", features = ["http"] }
worker-macros = { version = "0.6.0", features = ["http"] }
