[package]
name = "up-down-workers"
version = "0.1.0"
authors = ["Shivelight <shivelight@tuta.io>"]
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
futures = "0.3"
psl = "2"
serde = "1.0"
serde_json = "1.0"
worker = { version = "0.6.0" }
worker-macros = { version = "0.6.0" }
